--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <script src = "index.js" defer></script>
 </head>
 <body>
-    
+    <label for="first">First Name:</label>
+    <input type="text" id="first" name="first"><br><br>
+    <label for="last">Last Name:</label>
+    <input type="text" id="last" name="last"><br><br>
+    <label for="course">Course:</label>
+    <input type="text" id="course" name="course"><br><br>
+    <label for="section">Section:</label>
+    <input type="text" id="section" name="section"><br><br>
+    <label for="role">Role:</label>
+    <input type="text" id="role" name="role"><br><br>
+    <input type="button" id="submit" value="Submit"><br><br>
+    <script src = "index.js" defer></script>
 </body>
 </html>
