--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M12 JSON</title>
-    <script src = "index.js" defer></script>
+    <title>M12JSON</title>
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <form>
-        <label for="first">First Name:</label>
-        <input type="text" id="first" name="first"><br><br>
-        <label for="last">Last Name:</label>
-        <input type="text" id="last" name="last"><br><br>
-        <label for="course">Course:</label>
-        <input type="text" id="course" name="course"><br><br>
-        <label for="section">Section:</label>
-        <input type="text" id="section" name="section"><br><br>
-        <label for="role">Role:</label>
-        <input type="text" id="role" name="role"><br><br>
-        <input type="button" id="submit" value="Submit"><br><br>
-        <script src = "index.js" defer></script>
-    </form>
+    <p> First Name: </p>
+    <input type="Text" id="firstName"> </input>
+
+    <p> Last Name: </p>
+    <input type="Text" id="lastName"> </input>
+
+    <p> Course: </p>
+    <input type="Text" id="course"> </input>
+
+    <p> Section Name: </p>
+    <input type="Text" id="sectionName"> </input>
+
+    <p> Role (instructor/student): </p>
+    <input type="Text" id="role"> </input>
+
+    <br>
+
+    <input type="submit" value="JSON" id="submit">     
 </body>
 </html>
